--- a/roles/dynamicInfoblox/tasks/main.yml
+++ b/roles/dynamicInfoblox/tasks/main.yml
@@ -21,13 +21,14 @@
       address: 192.168.0.17
 
 #The network, host ip/address, admin, and password will need to be adjusted for the infoblox installation
+#Default IP address is 192.168.1.2
 - name: 'Use the next ip lookup to get next the available IP address for a given subnet'
   set_fact: 
     ipaddr: "{{ lookup('nios_next_ip', '192.168.0.0/23', provider={'host': '192.168.0.11', 'username': 'admin', 'password': 'integrate'}) }}"
 
 - name: Create a host record at the dynamically gathered address
   nios_host_record:
-    name: 'example.acme.com'
+    name: 'dynamic.acme.com'
     ipv4:
       - address: '{{ item }}'
     state: present
