--- a/test_nios.yml
+++ b/test_nios.yml
@@ -1,5 +1,6 @@
 ---
-- hosts: localhost
+- name: Dynamically create a host record at the next available ip
+  hosts: localhost
   connection: local
 
   roles:
