--- a/roles/dynamicInfoblox/tasks/main.yml
+++ b/roles/dynamicInfoblox/tasks/main.yml
@@ -21,13 +21,14 @@
     state: present
     provider: '{{ nios_provider }}'
 
-#  This is a manual step for now     
-#- name: 'Create a reverse DNS zone call 1.168.192.in-addr.arpa'
-#  nios_zone:
-#    name: 1.168.192.in-addr.arpa
-#    comment: this is a reverse DNS zone called 1.168.192.in-addr.arpa'
-#    state: present
-#    provider: '{{ nios_provider }}'
+- name: 'Create a reverse DNS zone call 1.168.192.in-addr.arpa'
+  uri:
+    url: 'https://{{ nios_provider.host }}/wapi/v2.6/zone_auth'
+    method: POST
+    user: '{{ nios_provider.username }}'
+    password: '{{ nios_provider.password }}'
+    body: '{"fqdn":"192.168.1.0/24","zone_format":"IPV4"}'
+    body_format: json
 
 - name: 'Set a fact for the local zone for further reuse'
   set_fact:
