--- a/roles/dynamicInfoblox/tasks/main.yml
+++ b/roles/dynamicInfoblox/tasks/main.yml
@@ -21,17 +21,22 @@
     state: present
     provider: '{{ nios_provider }}'
 
-- name: 'Create a reverse DNS zone call 1.168.192.in-addr.arpa'
+- name: 'Create a reverse DNS zone called 1.168.192.in-addr.arpa'
   uri:
     url: 'https://{{ nios_provider.host }}/wapi/v2.6/zone_auth'
     method: POST
     user: '{{ nios_provider.username }}'
     password: '{{ nios_provider.password }}'
-    body: '{"fqdn":"192.168.1.0/24","zone_format":"IPV4"}'
+    #Extra space to avoid type detection
+    body: ' {{ reverse_json_data|to_json }}'
     body_format: json
     validate_certs: no
   register: reverse_dns_create
   ignore_errors: true
+  vars:
+    reverse_json_data:
+      "fqdn":"192.168.1.0/24"
+      "zone_format":"IPV4"
 
 - name: 'Idempotency check for reverse zone already existing'
   fail: 
