--- a/roles/dynamicInfoblox/tasks/main.yml
+++ b/roles/dynamicInfoblox/tasks/main.yml
@@ -23,21 +23,21 @@
 
 - name: 'Create a reverse DNS zone called 1.168.192.in-addr.arpa'
   uri:
-    url: 'https://{{ nios_provider.host }}/wapi/v2.6/zone_auth'
+    url: https://{{ nios_provider.host }}/wapi/v2.6/zone_auth
     method: POST
     user: '{{ nios_provider.username }}'
     password: '{{ nios_provider.password }}'
-    #Extra space to avoid type detection
     body: "{{ reverse_zone_yml|to_json }}"
+    force_basic_auth: true
     headers:
-      Content-Type: application/json
+      Content-Type: "application/json"
     validate_certs: no
   register: reverse_dns_create
   ignore_errors: true
   vars:
     reverse_zone_yml:
-      fqdn: '192.168.1.0/24'
-      zone_format: 'IPV4'
+      fqdn: "192.168.1.0/24"
+      zone_format: "IPV4"
  
 - name: 'Idempotency check for reverse zone already existing'
   fail: 
