--- a/roles/dynamicInfoblox/tasks/main.yml
+++ b/roles/dynamicInfoblox/tasks/main.yml
@@ -59,5 +59,5 @@
   include_tasks: host_record_generation.yml
   loop_control:
     loop_var: count 
-  with_sequence: start=1 end={{ host_count }}
+  with_sequence: start=1 end={{ host_count|int }}
 ...
