--- a/roles/dynamicInfoblox/tasks/main.yml
+++ b/roles/dynamicInfoblox/tasks/main.yml
@@ -22,7 +22,7 @@
     provider: '{{ nios_provider }}'
 
 - name: 'Create a reverse DNS zone called 1.168.192.in-appr.arpa'
-  script: task_create-authoritative-reverse-zone.sh
+  include_tasks: dynamic_provider_template.yml
 
 #Having issues with the return codes - needs further investigation
 #- name: 'Create a reverse DNS zone called 1.168.192.in-addr.arpa'
