--- a/roles/dynamicInfoblox/tasks/main.yml
+++ b/roles/dynamicInfoblox/tasks/main.yml
@@ -19,6 +19,9 @@
     comment: DNS zone called {{ ansible_zone }}
     state: present
     provider: '{{ nios_provider }}'
+    # Need to sort out some details here
+    grid_primary:
+      name: 'gridmaster.{{ ansible_zone }}'
 
 - name: 'Create a reverse DNS zone called 1.168.192.in-appr.arpa'
   include_tasks: dynamic_provider_template.yml
