--- a/roles/dynamicInfoblox/defaults/main.yml
+++ b/roles/dynamicInfoblox/defaults/main.yml
@@ -5,6 +5,7 @@ nios_provider:
   password: infoblox
 
 #These can optionally be overriden at the role level
+host_count: 1
 ansible_zone: ansible.local
 ansible_subnet: 192.168.1.0/24
 gateway_address: '{{ ansible_subnet|subnet_to_gateway }}.1'
