--- a/roles/dynamicInfoblox/tasks/host_record_generation.yml
+++ b/roles/dynamicInfoblox/tasks/host_record_generation.yml
@@ -11,7 +11,7 @@
 #This should choose the next logical hostname count so this role can run cumulatively
 - name: Create a host record at the dynamically gathered address
   nios_host_record:
-    name: 'host{{ host_count }}.{{ ansible_zone }}'
+    name: 'host{{ count }}.{{ ansible_zone }}'
     ipv4:
       - address: '{{ item }}'
     state: present
