--- a/roles/dynamicInfoblox/tasks/main.yml
+++ b/roles/dynamicInfoblox/tasks/main.yml
@@ -56,6 +56,6 @@
 - name: 'Dynamically generate {{ host_count }} host records at next available ip in {{ ansible_subnet }}'
   include_tasks: host_record_generation.yml
   loop_control:
-    loop_var: host_count 
-  with_sequence: start=1 end={{ host_count|int+1 }}
+    loop_var: count 
+  with_sequence: start=1 end={{ host_count }}
 ...
