--- a/roles/dynamicInfoblox/tasks/main.yml
+++ b/roles/dynamicInfoblox/tasks/main.yml
@@ -23,7 +23,7 @@
     #grid_primary:
     #  - name: 'gridmaster.{{ ansible_zone }}'
 
-- name: 'Create a reverse DNS zone called 1.168.192.in-appr.arpa'
+- name: 'Create a reverse DNS zone'
   include_tasks: dynamic_provider_template.yml
 
 #Having issues with the return codes - needs further investigation
