--- a/roles/dynamicInfoblox/tasks/main.yml
+++ b/roles/dynamicInfoblox/tasks/main.yml
@@ -23,27 +23,27 @@
     #grid_primary:
     #  - name: 'gridmaster.{{ ansible_zone }}'
 
-- name: 'Create a reverse DNS zone'
-  include_tasks: dynamic_provider_template.yml
+#Uri module idempotecy preferred
+#- name: 'Create a reverse DNS zone'
+#  include_tasks: dynamic_provider_template.yml
 
-#Having issues with the return codes - needs further investigation
-#- name: 'Create a reverse DNS zone called 1.168.192.in-addr.arpa'
-#  uri:
-#    url: https://{{ nios_provider.host }}/wapi/v2.6/zone_auth
-#    method: POST
-#    user: '{{ nios_provider.username }}'
-#    password: '{{ nios_provider.password }}'
-#    body: "{{ reverse_zone_yml|to_json }}"
-#    force_basic_auth: true
-#    headers:
-#      Content-Type: "application/json"
-#    validate_certs: no
-#  register: reverse_dns_create
-#  failed_when: reverse_dns_create.status != 201 or reverse_dns_create.status != 200
-#  vars:
-#    reverse_zone_yml:
-#      fqdn: "192.168.1.0/24"
-#      zone_format: "IPV4"
+- name: 'Create a reverse DNS mapping to forward DNS zone'
+  uri:
+    url: https://{{ nios_provider.host }}/wapi/v2.6/zone_auth
+    method: POST
+    user: '{{ nios_provider.username }}'
+    password: '{{ nios_provider.password }}'
+    body: "{{ reverse_zone_yml|to_json }}"
+    force_basic_auth: true
+    status_code: 201
+    headers:
+      Content-Type: "application/json"
+    validate_certs: no
+  register: reverse_dns_create
+  vars:
+    reverse_zone_yml:
+      fqdn: "{{ nios_subnet }}"
+      zone_format: "IPV4"
 
 - name: Create a host record for the gateway address
   nios_host_record:
@@ -53,6 +53,8 @@
     state: present
     provider: '{{ nios_provider }}'
 
+#Generating records this way should be for demo purposes
+#Normal scenario would be to iterate over a dictionary/list of hosts
 - name: 'Dynamically generate {{ host_count }} host records at next available ip in {{ ansible_subnet }}'
   include_tasks: host_record_generation.yml
   loop_control:
