--- a/roles/dynamicInfoblox/tasks/main.yml
+++ b/roles/dynamicInfoblox/tasks/main.yml
@@ -35,9 +35,9 @@
     password: '{{ nios_provider.password }}'
     body: "{{ reverse_zone_yml|to_json }}"
     force_basic_auth: true
-    #201 signifies success
+    #201 signifies successful creation
     #400 signifies existing entry
-    #both should signify success
+    #both should signify a successful WAPI call
     status_code: 201,400
     headers:
       Content-Type: "application/json"
