--- a/roles/dynamicInfoblox/tasks/main.yml
+++ b/roles/dynamicInfoblox/tasks/main.yml
@@ -65,10 +65,10 @@
   with_sequence: start=1 end={{ host_count }}
 
 - block:
-    - name: Ensure that the jq package is installed
-      dnf:
-        name: jq
-        state: present
+    #- name: Ensure that the jq package is installed
+    #  dnf:
+    #    name: jq
+    #    state: present
 
     - name: Generate a snapshot of the existing records
       include_tasks: dynamic_provider_shell_template.yml
