--- a/roles/dynamicInfoblox/defaults/main.yml
+++ b/roles/dynamicInfoblox/defaults/main.yml
@@ -1,10 +1,4 @@
-nios_provider:
-  #Out-of-the-box defaults specified here
-  host: 192.168.1.2
-  username: admin
-  password: infoblox
-
-#These can optionally be overriden at the role level
+#These can optionally be overridden. Role defaults at the lowest variable precidence
 host_count: 1
 ansible_zone: ansible.local
 ansible_subnet: 192.168.1.0/24
