pull back on service

--- a/roles/updateService/tasks/main.yml
+++ b/roles/updateService/tasks/main.yml
@@ -1,16 +1,16 @@
 ---
-- name: Fail the play and suggest that user needs to supply the gridmember_fqdn and state variables
+- name: Fail the play and suggest that user needs to supply state variables
   fail:
-    msg: "Please specify the gridmember_fqdn and state [started, restarted]"
+    msg: "Please specify the state [started, restarted]"
   when: gridmember_fqdn is undefined or state is undefined
 
-- name: "Gather the fqdn of {{ gridmember_fqdn }}"
+- name: "Gather the fqdn of {{ nios_provider.host }}"
   include_tasks: dynamic_provider_shell_template.yml
   register: gridmember_info
   vars:
     shell_template: 'gridmemberFqdn'
 
-- name: "Start the dns service on  {{ gridmember_fqdn }"
+- name: "Start the dns service on  {{ host_provider.host }"
   include_tasks: dynamic_provider_shell_template.yml
   vars:
     shell_template: 'startDns'
@@ -18,7 +18,7 @@
 
 - block:
     #Default invocation is all
-    - name: Restart the '{{ service_option }} on {{ gridmember_fqdn }}'
+    - name: Restart the '{{ service_option }} on {{ nios_provider }}'
       include_tasks: dynamic_provider_shell_template.yml
       vars:
         shell_template: 'restartService' 
