--- a/roles/updateService/tasks/main.yml
+++ b/roles/updateService/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Fail the play and suggest that user needs to supply the gridmaster_fqdn or state variables
   fail:
-    msg: "Please specify the gridmaster_fqdnm or state [started, restarted]"
+    msg: "Please specify the gridmaster_fqdn or state [started, restarted]"
   when: gridmaster_fqdn is undefined or state is undefined
 
 - name: "Gather the fqdn of {{ nios_provider.host }}"
@@ -10,7 +10,7 @@
   vars:
     shell_template: 'gridmemberFqdn'
 
-- name: "Start the dns service on  {{ gridmaster_fqdn }}"
+- name: "Start the dns service on {{ gridmaster_fqdn }}"
   include_tasks: dynamic_provider_shell_template.yml
   vars:
     shell_template: 'startDns'
