--- a/take_snapshot.yml
+++ b/take_snapshot.yml
@@ -4,4 +4,4 @@
   connection: local
  
   roles:
-    - { role: snapshotConfiguration }
+    - { role: snapshotConfiguration, wapi_version: 'v2.6' }
