--- a/roles/snapshotConfiguration/tasks/main.yml
+++ b/roles/snapshotConfiguration/tasks/main.yml
@@ -8,7 +8,7 @@
   include_tasks: dynamic_provider_shell_template.yml
   vars:
     shell_template: 'snapshot'
-    snapshot_comment: 'ansible_snapshot'
+    snapshot_comment: 'AnsibleSnapshot'
 
 - name: Remove the generated cookie file
   file:
