--- a/roles/snapshotConfiguration/tasks/main.yml
+++ b/roles/snapshotConfiguration/tasks/main.yml
@@ -8,6 +8,7 @@
   include_tasks: dynamic_provider_shell_template.yml
   vars:
     shell_template: 'snapshot'
+    #Do not put any non alphanumeric characters or spaces for the comment
     snapshot_comment: 'AnsibleSnapshot'
 
 - name: Remove the generated cookie file
