--- a/roles/dynamicInfoblox/defaults/main.yml
+++ b/roles/dynamicInfoblox/defaults/main.yml
@@ -1,4 +1,4 @@
 #These can optionally be overridden. Role defaults at the lowest variable precidence
 ansible_zone: ansible.local
 ansible_subnet: 192.168.1.0/24
-gateway_address: '{{ ansible_subnet|subnet_to_gateway }}.1'
+gateway_address: '{{ ansible_subnet | ipaddr("first_usable") }}'
