--- a/roles/dynamicInfoblox/tasks/main.yml
+++ b/roles/dynamicInfoblox/tasks/main.yml
@@ -13,20 +13,19 @@
     state: present
     provider: '{{ nios_provider }}'
 
-- name: 'Create a forward DNS local zone called ansible.local'
+- name: 'Create a local forward DNS local zone called {{ ansible_zone }}'
   nios_zone:
     name: '{{ ansible_zone }}'
-    comment: DNS zone called {{ ansible_zone }}
+    comment: forward DNS zone
     state: present
     provider: '{{ nios_provider }}'
 
-- name: 'Retrieve the Gridmaster fqdn'
+- name: 'Retrieve the Grid Master fqdn'
   uri:
     url: 'https://{{ nios_provider.host }}/wapi/{{ wapi_version }}/ipv4address?ip_address={{ nios_provider.host }}&_return_fields=names&_return_as_object=1'
     method: GET
     user: '{{ nios_provider.username }}'
     password: '{{ nios_provider.password }}'
-    force_basic_auth: true
     #200 signifies successful creation
     status_code: 200
     headers:
@@ -43,7 +42,7 @@
 - name: 'Update the forward zone to reflect its new Grid primary'
   nios_zone:
     name: '{{ ansible_zone }}'
-    comment: DNS zone called {{ ansible_zone }}
+    comment: forward DNS zone
     state: present
     provider: '{{ nios_provider }}'
     grid_primary:
@@ -62,7 +61,6 @@
     user: '{{ nios_provider.username }}'
     password: '{{ nios_provider.password }}'
     body: "{{ reverse_zone_yml|to_json }}"
-    force_basic_auth: true
     #201 signifies successful creation
     #400 signifies existing entry
     #both should signify a successful WAPI call
@@ -79,9 +77,10 @@
       grid_primary:
         - name: '{{ gridmaster_fqdn }}'
 
+#gateway_way address computed by ip_addr("first_usable") in defaults/main.yml
 - name: Create a host record for the gateway address
   nios_host_record:
-    name: 'gateway{{ ansible_subnet | strip_cidr | replace(".","_") }}.{{ ansible_zone }}'
+    name: 'gateway{{ gateway_address | replace(".","_") }}.{{ ansible_zone }}'
     ipv4:
       - address: '{{ gateway_address }}'
     state: present
@@ -95,4 +94,8 @@
     loop_var: count 
   with_sequence: start=1 end={{ host_count }}
   when: host_count is defined
+
+- name: 'Statically import host records from a csv file'
+  include_tasks: csv_record_import.yml
+  when: host_csv is defined
 ...
