--- a/roles/dynamicNameServerGroupInfoblox/tasks/main.yml
+++ b/roles/dynamicNameServerGroupInfoblox/tasks/main.yml
@@ -6,10 +6,10 @@
     state: present
     provider: '{{ nios_provider }}'
 
-- name: 'Create a forward DNS local zone called ansible.local'
+- name: 'Create a forward DNS zone called {{ ansible_zone }}'
   nios_zone:
     name: '{{ ansible_zone }}'
-    comment: DNS zone called {{ ansible_zone }}
+    comment: forward DNS zone
     state: present
     provider: '{{ nios_provider }}'
 
@@ -19,7 +19,6 @@
     method: GET
     user: '{{ nios_provider.username }}'
     password: '{{ nios_provider.password }}'
-    force_basic_auth: true
     #200 signifies successful retrieval
     status_code: 200
     headers:
@@ -40,7 +39,6 @@
     user: '{{ nios_provider.username }}'
     password: '{{ nios_provider.password }}'
     body: '{{ nsgroup_yml|to_json }}'
-    force_basic_auth: true
     #201 signifies successful creation
     status_code: 201,400
     headers:
@@ -54,22 +52,21 @@
       grid_primary:
         - name: '{{ gridmaster_fqdn }}' 
 
-#Had to remove module created forward zone to create it with ns_group
-- name: 'Remove the forward DNS local zone called ansible.local'
+#Had to remove created forward zone to recreate it with ns_group
+- name: 'Remove the forward DNS zone called {{ ansible_zone }}'
   nios_zone:
     name: '{{ ansible_zone }}'
     comment: DNS zone called {{ ansible_zone }}
     state: absent
     provider: '{{ nios_provider }}'
 
-- name: 'Update the forward zone to reflect its new Grid primary as a name server group'
+- name: 'Update the forward zone {{ ansible_zone }} to reflect its new Grid primary as name server group {{ name_server_group }}'
   uri:
     url: 'https://{{ nios_provider.host }}/wapi/{{ wapi_version }}/zone_auth'
     method: POST
     user: '{{ nios_provider.username }}'
     password: '{{ nios_provider.password }}'
     body: '{{ forward_zone_yml|to_json }}'
-    force_basic_auth: true
     #201 signifies successful creation
     #400 signifies existing entry
     #both should signify a successful WAPI call
@@ -92,7 +89,6 @@
     user: '{{ nios_provider.username }}'
     password: '{{ nios_provider.password }}'
     body: "{{ reverse_zone_yml|to_json }}"
-    force_basic_auth: true
     #201 signifies successful creation
     #400 signifies existing entry
     #both should signify a successful WAPI call
@@ -111,7 +107,7 @@
 
   #- name: Create a host record for the gateway address
   #nios_host_record:
-  #  name: 'gateway{{ ansible_subnet | strip_cidr | replace(".","_") }}.{{ ansible_zone }}'
+  #  name: 'gateway{{ ansible_subnet | ipaddr('first_usable') | replace(".","_") }}.{{ ansible_zone }}'
   #  ipv4:
   #    - address: '{{ gateway_address }}'
   #  state: present
